Update base0D (dull blue).

--- a/bushido.yaml
+++ b/bushido.yaml
@@ -13,6 +13,6 @@ base09: "d0233a"
 base0A: "a94804"
 base0B: "44d092"
 base0C: "14adb6"
-base0D: "3a627c"
+base0D: "0a4392"
 base0E: "a74f7e"
 base0F: "1aefe3"
