--- a/bushido.yaml
+++ b/bushido.yaml
@@ -3,7 +3,7 @@ author: "Siddhartha Menon"
 base00: "040f14"
 base01: "6cd548"
 base02: "f36d0c"
-base03: "616671"
+base03: "323c51"
 base04: "008eff"
 base05: "ffdfe4"
 base06: "b00a64"
